--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,83 +1,270 @@
-// 颜色
+  
+// 布局
+.fl{
+    display: flex;
+}
+.fl1{
+    flex: 1;
+}
+.flw{
+    flex-wrap: wrap;
+}
+.flc{
+    display: flex;
+    justify-content: center;
+}
+.fle{
+    display: flex;
+    justify-content: flex-end;
+}
+.flsa{
+    display: flex;
+    justify-content: space-around;
+}
+.flsb{
+    display: flex;
+    justify-content: space-between;
+}
+.flcc{//任意元素居中
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flc-y{
+    display: flex;
+    align-items: center;
+} 
+.fl-y{//垂直
+    display: flex;
+    flex-direction: column;
+}
+.fl-y-c{ // 垂直水平
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.fl-y-sb{//垂直上下布局
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; 
+}
+.fl-y-sa{//垂直上下环绕布局-水平居中
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; 
+    align-items: center;
+}
+.fl-y-e{ // 垂直底部排序
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+} 
+.fl-y-center { // 垂直居中
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+//字体大小
+.f12{
+    font-size: 12px;
+}
+.f14{
+    font-size: 14px;
+}
+.f15{
+    font-size: 15px;
+}
+.f16{
+    font-size: 16px;
+}
+.f17{
+    font-size: 17px;
+}
+.f18{
+    font-size: 18px;
+}
+.f19{
+    font-size: 19px;
+}
+.f20{
+    font-size: 20px;
+}
+.f22{
+    font-size: 22px;
+} 
+ 
+//padding-left
+.pl5{
+    padding-left: 5px;
+}
+.pl10{
+    padding-left: 10px;
+}
+.pl15{
+    padding-left: 15px;
+}
+.pl20{
+    padding-left: 20px;
+}
+.pl25{
+    padding-left: 25px;
+}
+.pl30{
+    padding-left: 30px;
+}
+//padding-right
+.pr5{
+    padding-right: 5px;
+}
+.pr10{
+    padding-right: 10px;
+}
+.pr15{
+    padding-right: 15px;
+}
+.pr20{
+    padding-right: 20px;
+}
+.pr25{
+    padding-right: 25px;
+}
+.pr30{
+    padding-right: 30px;
+}
+//padding-bottom
+.pb5{
+    padding-bottom: 5px;
+}
+.pb10{
+    padding-bottom: 10px;
+}
+.pb15{
+    padding-bottom: 15px;
+}
+.pb20{
+    padding-bottom: 20px;
+}
+.pb25{
+    padding-bottom: 25px;
+}
+.pb30{
+    padding-bottom: 30px;
+}
+//padding-top
+.pt5{
+    padding-top: 5px;
+}
+.pt10{
+    padding-top: 10px;
+}
+.pt15{
+    padding-top: 15px;
+}
+.pt20{
+    padding-top: 20px;
+}
+.pt25{
+    padding-top: 25px;
+}
+.pt30{
+    padding-top: 30px;
+}
+//margin-left
+.ml5{
+    margin-left: 5px;
+}
+.ml10{
+    margin-left: 10px;
+}
+.ml15{
+    margin-left: 15px;
+}
+.ml20{
+    margin-left: 20px;
+}
+.ml25{
+    margin-left: 25px;
+}
+.ml30{
+    margin-left: 30px;
+}
+//margin-right 
+.mr5{
+    margin-right: 5px;
+}
+.mr10{
+    margin-right: 10px;
+}
+.mr15{
+    margin-right: 15px;
+}
+.mr20{
+    margin-right: 20px;
+}
+.mr25{
+    margin-right: 25px;
+}
+.mr30{
+    margin-right: 30px;
+}
+//padding-bottom
+.mb5{
+    margin-bottom: 5px;
+} 
+.mb10{
+    margin-bottom: 10px;
+}
+.mb15{
+    margin-bottom: 15px;
+}
+.mb20{
+    margin-bottom: 20px;
+}
+.mb25{
+    margin-bottom: 25px;
+}
+.mb30{
+    margin-bottom: 30px;
+}
+//padding-top
+.mt5{
+    margin-top: 5px;
+}
+.mt10{
+    margin-top: 10px;
+}
+.mt15{
+    margin-top: 15px;
+}
+.mt20{
+    margin-top: 20px;
+}
+.mt25{
+    margin-top: 25px;
+}
+.mt30{
+    margin-top: 30px;
+}
+//文字居中
+.t-c{
+    text-align: center;
+}
+//文字右居中
+.t-r{
+    text-align: right;
+} 
 
 .red{
-  background-color: #F00;
+    background-color: #F00;
+}
+.blue{
+    background-color: #00F;
 }
 .yellow{
-  background-color: yellow;
-} 
+    background-color: #FF0;
+}
 .gay{
-  background-color: #e2e2e2;
-}
-.fred{
-  color: #f60;
-}
-
-
-// 关于布局  
-.hfull{
-  height: 100%;
-}
-.flcc{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.h50{
-    height:50px;
-    line-height:50px;
-}
-
-.t-b{//上下布局
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; 
-}
-
-/* 辅助样式 */ 
-.bold{
-font-weight: 700;
-color: #333;
-}
-.wireb{/*下滑线*/   
-border-bottom: 2px solid #ff5c01 !important;
-} 
-.wire{/*线*/  
-height: 1px; 
-border-bottom: 2px solid #ff5c01 !important;
-} 
-.border{
-border: 1px solid #e6e6e6;
-} 
-.elps{//单行省略号
-overflow: hidden;
-text-overflow: ellipsis;
-white-space: nowrap; 
-}
-.elp{
-word-break: break-all;
-}
-.bottomArrow {//向下的箭头
-&::after{
-    content: '';
-    position: absolute; 
-    width: 140px;
-    height: 1px;
-    background-color: #F00;
-    bottom: -1px;
-    left: 0;
-}
-&::before{
-    content: '';
-    position: absolute; 
-    width: 10px;
-    height: 10px;
-    background-color: #F00;
-    bottom: -11px;
-    left: 65px;
-}
-} 
-.verticalLine{//标题部分的竖线
-padding-left: 10px;
-border-left: 3px solid #ff6620; 
-}
+    background-color: #e2e2e2;
+  }
