--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -44,3 +44,8 @@
 .el-range-separator {
   box-sizing: content-box;
 }
+
+// 按钮组的margin 10取消
+// .el-button+.el-button{
+//     margin-left: 0 !important;
+// }
